# optimizer

./: .gitignore  LICENSE  README.md  hw_config_proposal.json  pyproject.toml  setup.py  sim_feedback.json
artifacts/: last_submitted_proposal.json  summary.json
docs/: optimizer_algorithm_architecture_implementation.md
examples/: component_catalog.json  component_catalog_16gpu_16cpu_memory_dse.json  component_catalog_16gpu_16cpu_memory_dse_link.json  component_catalog_16gpu_16cpu_switch.json  component_catalog_enterprise.json  component_catalog_enterprise_h100_3tier.json  component_catalog_host_templates.json  component_catalog_tgrl.json  search_space.json  search_space_16gpu_16cpu_hetero_rack_dse.json  search_space_16gpu_16cpu_memory_dse.json  search_space_16gpu_16cpu_switch.json  search_space_1rack_4device_exhaustive_topology.json  search_space_2rack_4device_exhaustive_topology.json  search_space_3rack_exhaustive_tiny.json  search_space_4rack_2gpu_1cpu_1mem_pool.json  search_space_4rack_exhaustive_tiny.json  search_space_4rack_inter_rack_hetero.json  search_space_4rack_intra_rack_hetero.json  search_space_5rack_exhaustive_tiny.json  search_space_enterprise.json  search_space_enterprise_4gpu_small_2rack_tgrl.json  search_space_enterprise_h100_3tier_tgrl.json  search_space_host_template_tgrl.json  search_space_small_seed_expandable.json  search_space_tcro_latent_rack.json  search_space_tgrl.json  search_space_tgrl_exhaustive_tiny.json  workload_example.json
scripts/: exhaustive_search.py  plot_tgrl_topology_path.py
tests/: test_constraints.py  test_enterprise_h100_3tier_examples.py  test_exhaustive_search.py  test_feedback_parser.py  test_heuristic_exporter.py  test_heuristic_search.py  (+9 more)
(+60 files in other folders)
