[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesign-optimizer"
version = "0.1.0"
description = "Hardware/software topology search optimizer for heterogeneous CHASE architectures."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Yuchen Fan"},
  {name = "Minghong Sun"},
  {name = "Jikui Ma"},
  {name = "Shunyu Mao"},
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
rl = [
  "numpy>=1.26",
  "torch>=2.3",
]

[project.scripts]
codesign-opt = "codesign_optimizer.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
